[metadata]
name = geo_deep_learning
version = 0.0.0
title = Geo Deep Learning
author = NRCan
author_email =      # FIXME
maintainer = NRCan
maintainer_email =  # FIXME
url = https://github.com/NRCan/geo-deep-learning
description = Deep learning applied to geo-referenced datasets
long_description = file: README.md
keywords =
    Geospatial
    Deep Learning
platforms = linux_x86_64
language = English
license = MIT
licence_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
